change hore to flower

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-3">
                 <h1>Lorem ipsum dolor sit.</h1>
-                <img src="./img/images.jpg" alt="horse">
+                <img src="./img/flower.jpg" alt="Flower">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla voluptatem esse reprehenderit iure quae provident, blanditiis at. Vitae labore voluptates reprehenderit? Ea, sit.</p>
             </div>
             <div class="col-3">
